# app/Components/Content/Infrastructure/Http/Handler/CategoryHandler.php
@@ -2,17 +2,15 @@
 
 namespace App\Components\Content\Infrastructure\Http\Handler;
 
-use App\Components\Content\Application\Mapper\CountryViewMapper;
-use App\Components\Content\Application\Repository\CountryRepositoryInterface;
-use App\Components\Content\Data\Entity\Brand;
+use App\Components\Content\Data\Entity\CategoryEntity;
 use App\Libraries\Base\Http\Handler;
 use Illuminate\Http\JsonResponse;
 use OpenApi\Attributes as OA;
 
 #[OA\Get(
-    path: '/api/v1/content/brands',
-    description: 'Get Brands',
-    summary: 'Get Brands',
+    path: '/api/v1/content/categories',
+    description: 'Get countries',
+    summary: 'Get countries',
     tags: ['Content'],
     responses  : [
         new OA\Response(response: 200, description: 'success ', content: new OA\JsonContent(
@@ -22,7 +20,7 @@ use OpenApi\Attributes as OA;
                 new OA\Property(property: 'data', type: 'array', items: new OA\Items(properties: [
                     new OA\Property(property: 'uuid', type: 'string'),
                     new OA\Property(property: 'name', type: 'string'),
-                    new OA\Property(property: 'image', type: 'string'),
+                    new OA\Property(property: 'created_at', type: 'string'),
                 ])),
             ],
             type      : 'object'
@@ -30,15 +28,16 @@ use OpenApi\Attributes as OA;
     ]
 )]
 
-class BrandsHandler extends Handler
+class CategoryHandler extends Handler
 {
+
     public function __invoke(): JsonResponse
     {
         return $this->successResponseWithData(
-            Brand::query()->where('is_active', true)->get()->map(fn($brand) => [
-                'uuid' => $brand->uuid,
-                'name' => $brand->name,
-                'image' => $brand->getFirstMediaUrl('image'),
+            CategoryEntity::query()->get()->map(fn (CategoryEntity $category) => [
+                'uuid' => $category->uuid,
+                'name' => $category->name,
+                'created_at' => $category->created_at->toDateTimeString(),
             ])->toArray()
         );
     }
