# app/Components/Content/Resource/routes.php
@@ -1,12 +1,11 @@
 <?php
 
-use App\Components\Content\Infrastructure\Http\Handler\BrandsHandler;
+use App\Components\Content\Infrastructure\Http\Handler\CategoryHandler;
 use App\Components\Content\Infrastructure\Http\Handler\ConfigHandler;
 use App\Components\Content\Infrastructure\Http\Handler\CountryHandler;
 use App\Components\Content\Infrastructure\Http\Handler\CustomerSupportHandler;
 use App\Components\Content\Infrastructure\Http\Handler\FaqHandler;
 use App\Components\Content\Infrastructure\Http\Handler\NewsletterHandler;
-use App\Components\Content\Infrastructure\Http\Handler\PartnersHandler;
 use App\Components\Content\Infrastructure\Http\Handler\UploadMediaHandler;
 use Illuminate\Support\Facades\Route;
 
@@ -17,11 +16,9 @@ Route::group([
     Route::post('upload-media', UploadMediaHandler::class);
     Route::get('config', ConfigHandler::class);
     Route::get('faq', FaqHandler::class);
-    Route::get('brands', BrandsHandler::class);
-
-
+    Route::get('categories', CategoryHandler::class);
 });
-Route::post('partners', PartnersHandler::class);
+
 Route::post('customer-support', CustomerSupportHandler::class);
 Route::post('newsletter', NewsletterHandler::class);
 
